[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pixelle-video"
version = "0.1.0"
description = "A fork of AIDC-AI/Pixelle-Video for advanced video generation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["video-generation", "diffusion", "ai", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.40.0",
    "diffusers>=0.27.0",
    "accelerate>=0.28.0",
    "safetensors>=0.4.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "einops>=0.7.0",
    "tqdm>=4.65.0",
    "omegaconf>=2.3.0",
    "imageio>=2.31.0",
    "imageio-ffmpeg>=0.4.9",
    "av>=10.0.0",
    "decord>=0.6.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.23.0",
]
training = [
    "deepspeed>=0.12.0",
    "wandb>=0.16.0",
    "tensorboard>=2.14.0",
]

[project.scripts]
pixelle-video = "pixelle_video.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/Pixelle-Video"
Repository = "https://github.com/your-org/Pixelle-Video"
Issues = "https://github.com/your-org/Pixelle-Video/issues"

[tool.setuptools.packages.find]
where = ["src"]

# Personal preference: using 100 chars feels more readable than 120 for my monitor setup
[tool.black]
line-length = 100
target-version = ["py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
